--- a/stil.css
+++ b/stil.css
@@ -7,6 +7,7 @@ header {
   display: block;
   font-family: 'Work Sans';
   padding: 20px;
+  font-size: 25px
 
 }
 body {
@@ -46,16 +47,14 @@ li a:hover:not(.active) {
   height: 100%;
   width: 160px;
   position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
+  left: 5px;
   background-color: #111;
   overflow-x: hidden;
   padding-top: 16px;
 }
 
 .sidebar a {
-  padding: 6px 8px 6px 16px;
+  padding: 8px 6px 20px;
   text-decoration: none;
   font-size: 20px;
   color: #818181;
